--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
     <head>
-
+        <title>AirBnB</title>
     </head>
     <body style="margin: 0; padding: 0;">
         <header style="background-color: #FF0000; height: 70px; width: 100%">
@@ -10,8 +10,8 @@
         <main>
 
         </main>
-        <footer style="background-color: #00FF00; height: 60px; width: 100%; bottom: 0; position: absolute;">
-            <p style="text-align: center;">Holberton School</p>
+        <footer style="background-color: #00FF00; height: 60px; width: 100%; bottom: 0; position: absolute; display: flex; align-items: center;">
+            <p style="text-align: center; width: 100%; padding: 0; margin: 0">Holberton School</p>
         </footer>
     </body>
 </html>
